# scraper-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  log.py
app/api/: app.py  exceptions.py  middleware.py  server.py
app/api/routes/: __init__.py  health.py
app/api/v1/routes/: __init__.py  courses.py  health.py  subjects.py  timetable.py
app/core/: cache.py  database.py  scraper.py  subjects.py
app/models/: __init__.py  generated.py
app/scheduler/: jobs.py  scheduler.py
app/schemas/: course.py  health.py  timetable.py
app/utils/: classes.py  custom_logger.py  database.py  redis_client.py  title_formatter.py
